--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-matplotlib==3.5.0
-numpy==1.21.4
-pandas==1.3.4
+matplotlib==3.6.0
+numpy==1.23.5
+pandas==1.5.2
+PyQt5==5.15.7
+PyYAML==6.0
+scipy==1.9.1
